Fixed spacing display in QListView with wrapped text.

The spacing was not being substracted from the viewport width when calculating
the available space for items. Auto-test included.

Reviewed-by: Olivier
Task-number: QTBUG-2678